onlyargs_derive/compile_tests/positional_single_bool.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    #[positional]
    rest: bool,
}

fn main() {}
